Revision history for Python extension KRISP

2.0.1
	* Sun May 23 2021 JoungKyun.Kim <hostmaster@oops.org>
	- fixed #3 Report utf-8-sig (depend on libchardet >= 1.0.6)
	- fixed #6 detector.done can't check

	* Sun Mar 18 2018 JoungKyun.Kim <hostmaster@oops.org>
	- add python 3.x classifiers in setup.py
	- build wheel package in Makefile

2.0.0
	* Tue May 10 2016 JoungKyun.Kim <hostmaster@oops.org>
	- compatible python-chardet <https://github.com/chardet/chardet>

1.0.2
	* Sat May  8 2016 JoungKyun.Kim <hostmaster@oops.org>
	- support python 3
	- 1.0.2 release

	* Fri May  6 2016 JoungKyun.Kim <hostmaster@oops.org>
	- add __version__ constant

	* Thu May  5 2016 JoungKyun.Kim <hostmaster@oops.org>
	- support detect_handledata_r for binary safe problems (libchardet >= 1.0.5)

1.0.1
	* Thu Apr 27 2011 JoungKyun.Kim <hostmaster@oops.org>
	- fixed overflow 32bit address on 64bit system
	- 1.0.1 release

	* Tue Apr 26 2011 JoungKyun.Kim <hostmaster@oops.org>
	- start 1.0.1 tree
	- fixed chardet.detect segfault on 64bit system

1.0.0
    * Mon Jul  5 2010 JoungKyun.Kim <hostmaster@oops.org>
    - 1.0.0 release
