@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # -*- coding: utf-8 -*-
 
-# Copyfight (c) 2018 JoungKyun.Kim <hostmaster@oops.org>
+# Copyfight 2021. JoungKyun.Kim all rights reserved.
 #
 # The contents of this file are subject to the Mozilla Public License Version
 # 1.1 (the "License"); you may not use this file except in compliance with
