@@ -1,5 +1,5 @@
 /*
- * Copyfight (c) 2018 JoungKyun.Kim <hostmaster@oops.org>
+ * Copyfight 2021. JoungKyun.Kim all rights reserevd.
  *
  * The contents of this file are subject to the Mozilla Public License Version
  * 1.1 (the "License"); you may not use this file except in compliance with
